--- a/src/app/features/game/game-edit/game-edit.component.html
+++ b/src/app/features/game/game-edit/game-edit.component.html
@@ -89,7 +89,7 @@
       </div>
       <div class="row m-lg-5">
         <div class="col">
-          <img class="img-fluid" src="{{item.image}}" alt="{{item.nom}}">
+          <img class="img-fluid d-block w-50 position-relative" src="{{item.image}}" alt="{{item.nom}}">
         </div>
       </div>
       <div class="form-group">
